--- a/manifest.json
+++ b/manifest.json
@@ -1,15 +1,15 @@
 {
   "name": "Jonas Helgi Portfolio",
   "short_name": "Jonas Helgi",
-  "start_url": ".",
+  "start_url": "/portfolio/",
 	"icons": [
 		{
-			"src": "/android-chrome-192x192.png",
+			"src": "android-chrome-192x192.png",
 			"sizes": "192x192",
 			"type": "image/png"
 		},
 		{
-			"src": "/android-chrome-512x512.png",
+			"src": "android-chrome-512x512.png",
 			"sizes": "512x512",
 			"type": "image/png"
 		}
