deploy: de965a65635f9cee0e84052a90a6c2133f049e9c

--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
-  "name": "Jonas Helgi Portfolio",
-  "short_name": "Jonas Helgi",
-  "start_url": "/portfolio/",
+	"name": "Jonas Helgi Portfolio",
+	"short_name": "Jonas Helgi",
+	"start_url": ".",
 	"icons": [
 		{
 			"src": "android-chrome-192x192.png",
