--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react-dom": "^17.0.9",
     "@types/react-router-dom": "^5.3.3",
     "@types/react-scroll": "^1.8.3",
+    "firebase-tools": "^10.2.1",
     "framer-motion": "6",
     "prettier": "^2.5.1",
     "react": "^17.0.2",
