--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "@types/react-dom": "^17.0.9",
     "@types/react-router-dom": "^5.3.3",
     "@types/react-scroll": "^1.8.3",
-    "firebase-tools": "^10.2.1",
+    "firebase-tools": "^11.16.1",
     "framer-motion": "6",
+    "i18next": "^22.4.9",
     "prettier": "^2.5.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-i18next": "^12.1.4",
     "react-icons": "^4.3.1",
     "react-router-dom": "^5.3.0",
     "react-scripts": "5.0.0",
